tests/invalid/checking_trait.ri
trait ToStr {
    fn to_str1(&self) string;
}

fn my_print(v: ToStr) {
    _ = v.to_str1();
}

extend string : ToStr {
    fn to_str1(self) string {
        return self;
    }
}

extend bool : ToStr {
    fn to_str1(&self) string {
        return if self.* { "true" } else { "false" };
    }
}

fn main() {
    my_print(""); // OK
    my_print(true); // OK
    my_print(1); // FAIL
}
